Historical release notes
========================

For what's new in this release, see CHANGES.txt.

3.3.3 - Unreleased
------------------

- Fixed "Manage portlets" not translated when there is no portlet visible.
  This closes http://dev.plone.org/plone/ticket/8454
  [vincentfretin]

- Better validation and error messages for group create/edit form.
  Fixes http://dev.plone.org/plone/ticket/9667
  [lzdych]

- plone.css will now output stylesheets with link rendering
  Fixes http://dev.plone.org/plone/ticket/9366

  sitemap template now displays objects without a value for Title
  applied patch from crchemist
  Fixes http://dev.plone.org/plone/ticket/9775
  [aaronv]

- Removed option "Send a mail with the password" from the join form,
  as we never send an email with the password.
  Refs http://dev.plone.org/plone/ticket/9670
  [maurits,vincentpretre,jladage]

- Buttons on discussion form are now hidden from print view.
  Fixes http://dev.plone.org/plone/ticket/8460
  [lzdych]
  
- Added missing migration step to update permissions on "legacy" 
  workflows for new roles. Thanks to Vitaliy Podoba for the patch.
  This fixes http://dev.plone.org/plone/ticket/8905
  [amleczko]


3.3.2 - November 3, 2009
------------------------

- Shift "Item type" options under the advanced search page to the right 
  when viewed for RTL scripts. This fixes 
  http://dev.plone.org/plone/ticket/9666 
  [emanlove] 

- Make sure the folder_listing, folder_summary_view, and folder_tabular_view
  call getText with a full acquisition chain (but make the conditional for
  whether to display text test for the existence of getText on the aq_base'd
  context to avoid accidental acquisition).  This fixes
  http://dev.plone.org/plone/ticket/8463
  [davisagli]

- Use PlonePAS methods for adding and removing members from groups, as well
  as for listing group membership. These methods are PAS aware and thus work
  correctly with PAS plugins other than the GroupUserFolder. Thanks to 